# bz-python

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  BUILD.bazel.bzip2  BUILD.bazel.openssl  BUILD.bazel.python  BUILD.bazel.zlib  MODULE.bazel  README.md  WORKSPACE.bazel  hello.py  hello_ssl.py  rules_foreign_cc.MODULE.bazel.patch  ssl_test.py
