load("@rules_python//python:defs.bzl", "py_binary")
load("@bazel_tools//tools/build_rules:test_rules.bzl", "file_test")

py_binary(
    name = "hello",
    srcs = ["hello.py"],
)

sh_test(
    name = "ssl",
    size = "small",
    srcs = ["@python-3.6.15//:bin/python3"],
    args = [
        "-m",
        "ssl",
    ],
)

sh_test(
    name = "bzip2",
    size = "small",
    srcs = ["@python-3.6.15//:bin/python3"],
    args = [
        "-m",
        "bz2",
    ],
)

genrule(
    name = "openssl-version",
    outs = ["openssl-version.txt"],
    cmd = """LD_LIBRARY_PATH="$(execpath @openssl-1.1.1t//:dir)/lib" "$(execpath @openssl-1.1.1t//:bin/openssl)" version > $@""",
    tools = [
        "@openssl-1.1.1t//:bin/openssl",
        "@openssl-1.1.1t//:dir",
    ],
)

file_test(
    name = "test-openssl-version",
    content = "OpenSSL 1.1.1t  7 Feb 2023\n",
    file = ":openssl-version",
)

genrule(
    name = "python-version",
    outs = ["python-version.txt"],
    cmd = "$(execpath @python-3.6.15//:bin/python3) --version > $@",
    tools = ["@python-3.6.15//:bin/python3"],
)

file_test(
    name = "test-python-version",
    content = "Python 3.6.15\n",
    file = ":python-version",
)

genrule(
    name = "python-openssl-version",
    srcs = ["ssl_test.py"],
    outs = ["python-openssl-version.txt"],
    cmd = "$(execpath @python-3.6.15//:bin/python3) $< > $@",
    tools = ["@python-3.6.15//:bin/python3"],
)

file_test(
    name = "test-python-openssl-version",
    content = "OpenSSL 1.1.1t",
    file = ":python-openssl-version",
)
