load("@rules_python//python:defs.bzl", "py_binary")
load("@bazel_tools//tools/build_rules:test_rules.bzl", "file_test")

py_binary(
    name = "hello",
    srcs = ["hello.py"],
)

genrule(
    name = "openssl-version",
    testonly = True,
    outs = ["openssl-version.txt"],
    cmd = """LD_LIBRARY_PATH="$(execpath @openssl-1.1.1t//:dir)/lib" "$(execpath @openssl-1.1.1t//:bin/openssl)" version > $@""",
    tools = [
        "@openssl-1.1.1t//:bin/openssl",
        "@openssl-1.1.1t//:dir",
    ],
)

file_test(
    name = "test-openssl-version",
    content = "OpenSSL 1.1.1t  7 Feb 2023\n",
    file = ":openssl-version",
)

genrule(
    name = "python-version",
    testonly = True,
    outs = ["python-version.txt"],
    cmd = """$(execpath @python-3.6.15//:bin/python3) --version > $@""",
    tools = ["@python-3.6.15//:bin/python3"],
)

file_test(
    name = "test-python-version",
    content = "Python 3.6.15\n",
    file = ":python-version",
)

genrule(
    name = "python-openssl-version",
    testonly = True,
    outs = ["python-openssl-version.txt"],
    cmd = """LD_LIBRARY_PATH="$(execpath @openssl-1.1.1t//:dir)/lib" $(execpath @python-3.6.15//:bin/python3) -c "import ssl; print(ssl.OPENSSL_VERSION)" > $@""",
    tools = [
        "@openssl-1.1.1t//:dir",
        "@python-3.6.15//:bin/python3",
    ],
)

file_test(
    name = "test-python-openssl-version",
    content = "OpenSSL 1.1.1t  7 Feb 2023\n",
    file = ":python-openssl-version",
)
