# Deliberately blank

# Well, except for all this:

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "python-3.6.15",
    build_file = "@//:BUILD.bazel.python",
    repo_mapping = {
        "@openssl": "@openssl-1.1.1w",
        "@bzip2": "@bzip2-1.0.8",
        "@zlib": "@zlib-1.3",
    },
    sha256 = "6e28d7cdd6dd513dd190e49bca3972e20fcf455090ccf2ef3f1a227614135d91",
    strip_prefix = "Python-3.6.15",
    url = "https://www.python.org/ftp/python/3.6.15/Python-3.6.15.tar.xz",
)

http_archive(
    name = "bzip2-1.0.8",
    build_file = "@//:BUILD.bazel.bzip2",
    sha256 = "ab5a03176ee106d3f0fa90e381da478ddae405918153cca248e682cd0c4a2269",
    strip_prefix = "bzip2-1.0.8",
    url = "https://sourceware.org/pub/bzip2/bzip2-1.0.8.tar.gz",
)

http_archive(
    name = "openssl-1.1.1w",
    build_file = "@//:BUILD.bazel.openssl",
    sha256 = "cf3098950cb4d853ad95c0841f1f9c6d3dc102dccfcacd521d93925208b76ac8",
    strip_prefix = "openssl-1.1.1w",
    url = "https://www.openssl.org/source/openssl-1.1.1w.tar.gz",
)

http_archive(
    name = "zlib-1.3",
    build_file = "@//:BUILD.bazel.zlib",
    sha256 = "ff0ba4c292013dbc27530b3a81e1f9a813cd39de01ca5e0f8bf355702efa593e",
    strip_prefix = "zlib-1.3",
    url = "https://www.zlib.net/zlib-1.3.tar.gz",
)
